Link the actual license file

--- a/myst.yml
+++ b/myst.yml
@@ -7,7 +7,9 @@ project:
   keywords: [astronomy]
   authors: [IRSA Scientists and Developers]
   github: https://github.com/Caltech-IPAC/irsa-tutorials/
-  license: BSD-3-Clause
+  license:
+    id: BSD-3-Clause
+    url: https://github.com/Caltech-IPAC/irsa-tutorials/blob/main/LICENSE
   jupyter:
     binder:
       repo: https://github.com/Caltech-IPAC/irsa-tutorials/
