--- a/toc.yml
+++ b/toc.yml
@@ -12,6 +12,8 @@ project:
           file: tutorials/spherex/spherex_cutouts.md
         - title: PSF Models
           file: tutorials/spherex/spherex_psf.md
+        - title: Source Discovery Tool
+          file: tutorials/spherex/spherex_sdt/sdt_irsa.md
     - title: Euclid
       file: tutorials/euclid/euclid.md
       children:
