--- a/deploy_to_fornax_manifest.in
+++ b/deploy_to_fornax_manifest.in
@@ -18,6 +18,19 @@ tutorials/simulated-data/roman_hlss_number_density.md
 tutorials/spherex/spherex_cutouts.md
 tutorials/spherex/spherex_intro.md
 tutorials/spherex/spherex_psf.md
+tutorials/spherex/spherex_sdt/conda-sdt_env.yml
+tutorials/spherex/spherex_sdt/README.md
+tutorials/spherex/spherex_sdt/sdt_irsa.md
+tutorials/spherex/spherex_sdt/spx_sdt/__init__.py
+tutorials/spherex/spherex_sdt/spx_sdt/aperture_photometry.py
+tutorials/spherex/spherex_sdt/spx_sdt/bokeh_viz.py
+tutorials/spherex/spherex_sdt/spx_sdt/default_sdt.param
+tutorials/spherex/spherex_sdt/spx_sdt/default_sdt.sex
+tutorials/spherex/spherex_sdt/spx_sdt/default.conv
+tutorials/spherex/spherex_sdt/spx_sdt/default.nnw
+tutorials/spherex/spherex_sdt/spx_sdt/firefly_viz.py
+tutorials/spherex/spherex_sdt/spx_sdt/sdt_utils.py
+tutorials/spherex/spherex_sdt/spx_sdt/source_extraction.py
 tutorials/spitzer/siav2_seip.md
 tutorials/techniques-and-tools/cloud-access-intro.md
 tutorials/techniques-and-tools/Parallelize_Convolution.md
